# bitte-cli

./: .envrc  .gitignore  Cargo.toml  NOTICE  README.md  default.nix  devshell.nix  devshellModule.nix  flake.nix  overlay.nix  package.nix  rustfmt.toml  shard.nix  shard.yml  treefmt.toml
bitte/: Cargo.toml
bitte/src/: main.rs
bitte/src/bitte_app/: certs.rs  info.rs  mod.rs  provision.rs  rebuild.rs  ssh.rs  terraform.rs  types.rs
cli/: Cargo.toml
cli/src/: cli.rs  main.rs  types.rs
cli/tests/: cli.rs  cli_test.rs
cli/tests/common/: mod.rs
devshellModules/: README.md  bitte-cli.nix  nix-devshell-temp-fix.nix
devshellModules/profiles/: bitte-debug-profile.nix
encrypted/cvn-testnet/: core-1.enc.json  core-1.pem  core-2.enc.json  core-2.pem  core-3.enc.json  core-3.pem
iogo/: Cargo.toml
iogo/src/: cli.rs  main.rs  nomad_event.rs
lib/: Cargo.toml
lib/src/: certs.rs  consul.rs  error.rs  info.rs  lib.rs  nomad.rs  provision.rs  rebuild.rs  ssh.rs  terraform.rs  types.rs
patches/nix/: 0001-Allow-paths-in-flake-local-settings.patch
pkgs/: bitte-shell.nix  damon.nix
rust/: Cargo.toml  flake.nix
rust/src/: main.rs
rust/src/bitte_app/: mod.rs  provision.rs  ssh.rs  terraform.rs
rust/tests/: cli.rs
secrets/: cvn-testnet-key.pem  cvn-testnet.csr  cvn-testnet.pem
shards/: default.nix
shell/: devshellModule.nix  diff-against-bitte-commit.sh  nomad-exec.sh  pre-commit.sh
shell/pkgs/: bitte-shell.nix  damon.nix
spec/: array_spec.cr  bitte_spec.cr
src/: bitte.cr  certs.rs  cli.cr  cli.rs  info.rs  lib.rs  main.rs  rebuild.rs  remote.cr  terraform.rs  types.rs  utils.rs
src/bitte/: certs.cr  cli.cr  cluster.cr  log_io.cr  terraform.cr
src/bitte/aws/: aws.cr  aws_types.cr
src/bitte/cli/: ami-upload.cr  certs.cr  deploy.cr  helper.cr  info.cr  job.cr  provision.cr  rebuild.cr  scp.cr  ssh-for-each.cr  ssh.cr  terraform.cr
src/bitte/cli/ami-upload/: common.cr  registry.cr  shell.cr
src/bitte/cli/terraform/: apply.cr  plan.cr
src/cli/: args.rs  opts.rs  subs.rs
src/types/: error.rs
src/utils/: error.rs  rebuild.rs  ssh.rs  terraform.rs  types.rs
