[package]
name = "bitte"
version = "0.1.0"
authors = ["manveru <michael.fellinger@iohk.io>"]
edition = "2018"

[dependencies]
regex = "*"
restson = "0.5.4"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
shellexpand = "2.1"
prettytable-rs = "^0.8.0"
rusoto_ec2 = "^0.46"
rusoto_core = "^0.46"
rusoto_signature = "^0.46"
rusoto_autoscaling = "^0.46"
tokio = "1.2.0"
execute = "0.2.8"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["suggestions", "color", "wrap_help"]