[package]
name = "bitte"
version = "0.1.0"
authors = ["manveru <michael.fellinger@iohk.io>"]
edition = "2018"

[dependencies]
bitte-lib = { path = "../lib" }
regex = "*"
restson = "0.5.4"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
shellexpand = "2.1"
prettytable-rs = "^0.8.0"
rusoto_ec2 = "^0.46"
rusoto_core = "^0.46"
rusoto_signature = "^0.46"
rusoto_autoscaling = "^0.46"
tokio = "1.2.0"
execute = "0.2.8"
log = "0.4.14"
pretty_env_logger = "0.4.0"
anyhow = "1.0"
duct = "0.13"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["suggestions", "color", "wrap_help"]

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"
paste = "1.0.4"
