[package]
name = "iogo"
version = "0.1.0"
authors = ["manveru <michael.fellinger@iohk.io>"]
edition = "2018"

[dependencies]
bitte-lib = { path = "../lib" }
restson = "0.7.0"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tokio = "1.9.0"
execute = "0.2.8"
log = "0.4.14"
pretty_env_logger = "0.4.0"
anyhow = "1.0.38"
colored = "2"
hyper = "0.14"
hyper-tls = "0.5.0"
clap_generate = "3.0.0-beta.2"
url = "^2.2"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["suggestions", "color", "wrap_help"]

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"
