[package]
name = "bitte-lib"
version = "0.1.0"
authors = ["manveru <michael.fellinger@iohk.io>"]
edition = "2018"

[dependencies]
regex = "*"
restson = "0.7.0"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive", "rc" ] }
shellexpand = "2.1"
prettytable-rs = "^0.8.0"
rusoto_ec2 = "^0.46"
rusoto_core = "^0.46"
rusoto_signature = "^0.46"
rusoto_autoscaling = "^0.46"
tokio = "1.9.0"
execute = "0.2.8"
log = "0.4.14"
pretty_env_logger = "0.4.0"
thiserror = "1.0"
base64 = "0.13.0"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
netrc-rs = "0.1.2"
colored = "2"
uuid = { version = "0.8", features = ["serde"] }
reqwest = { version = "0.11.4", features = ["json", "gzip"] }
anyhow = "1.0.42"
enum-utils = "0.1.2"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["suggestions", "color", "wrap_help"]

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"
pretty_assertions = "^0.7"
